Fri Jan 31 21:30:55  2003
- Fixed different minor issues and a border case (#include statement at the 
  last line of a included file)

Wed Jan 29 21:13:32  2003
- Fixed exception handling to report the correct error position
- Fixed another bug in the stream position calculation scheme
- Added a more elaborate sample 'list_includes' which lists the dependency
  information for a given source file (see test/list_includes/readme.txt).

Sat Jan 18 22:01:03  2003
- Fixed a bug in the stream position calculation scheme
- Made cpp::exceptions more standard conformant (added 'throw()' at appropriate 
  places)
- Overall housekeeping :-)

Wed Jan 15 21:54:20  2003
Changes since project start (still 0.5.0)
- Added #include <...> and #include "..." functionality
- pp directives are now generally recognized 
- Decoupled the C++ lexers and the pp grammar to separate compilation
  units (optionally) to speed up compilation (a lot!)

Thu Jan  2 12:39:30  2003
A completely new version 0.5.0 of the C preprocessor was startet. It's a 
complete rewrite of the existing code base. The main differences are:
- The preprocessor is now implemented as an iterator, which returns the 
  current preprocessed token from the input stream.
- The preprocessing of include files isn't implemented through recursion
  anymore. This follows directly from the first change. As a result of this
  change the internal error handling is simplified.
- The C preprocessor iterator itself is feeded by a new unified C++ lexer 
  iterator. BTW, this C++ lexer iterator could be used standalone and is not 
  tied to the C preprocessor. There are two different C++ lexers implemented 
  now, which are functionally completely identical. These expose a similar
  interface, so the C preprocessor could be used with both of them.
- The C++ lexers integrated into the C preprocessor by now are:
    Slex:   A spirit based table driven regular expression lexer (the slex 